integrated unit testing framework; created few first unit tests for: command line parser, options parser, rss feed filter, par-checker/repairer and par-renamer; new configure parameter "--enable-tests" to build the program with tests; use "nzbget --tests" to execute all tests or "nzbget --tests -h" for more options
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1304 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/README
+++ b/README
@@ -457,11 +457,14 @@ Since then the program has been completely rewritten.
 NZBGet distribution archive includes additional components
 written by other authors:
 
-PAR2:
+Par2:
 	Peter Brian Clements <peterbclements@users.sourceforge.net>
 
-PAR2 library API:
+Par2 library API:
 	Francois Lesueur <flesueur@users.sourceforge.net>
+
+Catch:
+	Two Blue Cubes Ltd <https://github.com/philsquared/Catch>
 
 jQuery:
 	John Resig <http://jquery.com>
